# star-grep

./: .gitignore  README.md  matcher.py  pyproject.toml  sample.txt  star-grep.py  test_debug.py  test_debug.txt
stargrep/: cli.py  matcher.py  output.py  walker.py
tests/: test_matcher.py  test_output.py  test_walker.py
